bk_ida/gccida/c0/lex
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/lex/src/cppexp.c:741:18: error: unknown type name 'cpp_reader_0'; did you mean 'cpp_reader'?
 struct op  lex( cpp_reader_0 *pfile, int skip_evaluation) 
                 ^~~~~~~~~~~~
                 cpp_reader
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/lex/src/cpplib.h:36:27: note: 'cpp_reader' declared here
typedef struct cpp_reader cpp_reader;
                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/lex/src/cppexp.c:746:7: error: unknown type name 'cpp_token_0'; did you mean 'cpp_token'?
const cpp_token_0 *token; // [rsp+18h] [rbp-38h] 
      ^~~~~~~~~~~
      cpp_token
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/lex/src/cpplib.h:40:26: note: 'cpp_token' declared here
typedef struct cpp_token cpp_token;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/lex/src/cppexp.c:749:1: error: unknown type name 'cpp_reader_0'; did you mean 'cpp_reader'?
cpp_reader_0 *pfilea; // [rsp+38h] [rbp-18h] 
^~~~~~~~~~~~
cpp_reader
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/lex/src/cpplib.h:36:27: note: 'cpp_reader' declared here
typedef struct cpp_reader cpp_reader;
                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/lex/src/cppexp.c:797:8: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[token->val.c] & 0xAC) != 0 ) 
       ^~~~~~~~~~~
       _sch_istable
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/lex/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/lex/src/obj/cppexp.o] Error 1
